# health-status-ee-exercise

./: .gitignore  README.md  pyproject.toml
R/: estimate_splitnorm_from_p10p90.r  font_hoist.r  interpolate_expert_params.r  plot_fns.r  process_expert_params.r  read_dfle_series.r  read_ex_series.r  read_hle_series.r  read_life_tables_2022b.r  read_long_run_series.r  read_old_hle_series.r  read_proj_ex_series.r  research_paper_outputs.r  research_paper_plot_fns.r  review_workshop_results.r  rsplitnorm_truncated.r  simulated_vals_outside_limits.r  splitnorm_switch_params.r  theme_hsee_exercise.r  workshop_plots_01.r  workshop_plots_02.r
python/: compare_metalogs_with_spnorms.py
