[project]
name = "health-status-ee-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    # Fix for $ RuntimeError: uvloop does not support Windows at the moment
    # https://github.com/google/orbax/issues/2914
    # $ uv add metalog-jax "orbax-checkpoint<=0.11.32"
    "metalog-jax",
    "numpy>=2.3.5",
    "orbax-checkpoint<=0.11.32",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]
